[gd_scene load_steps=10 format=2]

[ext_resource path="res://PlayerFollow.gd" type="Script" id=1]
[ext_resource path="res://EnemyTimer.gd" type="Script" id=2]
[ext_resource path="res://Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUB.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scoring.gd" type="Script" id=6]
[ext_resource path="res://Spawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://Projectiles.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 528.5, 312.5 )

[node name="Game" type="Node"]

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 4.0
script = ExtResource( 2 )

[node name="SpawnerLeft" parent="." instance=ExtResource( 7 )]
position = Vector2( -23, 460 )

[node name="SpawnerMiddle" parent="." instance=ExtResource( 7 )]
position = Vector2( 2236, 67 )

[node name="SpawnerRight" parent="." instance=ExtResource( 7 )]
position = Vector2( 4522, 445 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 2226, 542 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 2243, 570 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 2243, 571 )
current = true
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Camera2D"]
collision_layer = 256
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D"]
position = Vector2( 15, 6 )
shape = SubResource( 1 )

[node name="HUB" parent="." instance=ExtResource( 5 )]

[node name="Scoring" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Projectiles" type="Node" parent="."]
script = ExtResource( 8 )

[connection signal="timeout" from="EnemyTimer" to="SpawnerLeft" method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="SpawnerMiddle" method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="SpawnerRight" method="_on_EnemyTimer_timeout"]
[connection signal="dead" from="Player" to="EnemyTimer" method="_on_Player_dead"]
[connection signal="dead" from="Player" to="SpawnerLeft" method="_on_Player_dead"]
[connection signal="dead" from="Player" to="SpawnerMiddle" method="_on_Player_dead"]
[connection signal="dead" from="Player" to="SpawnerRight" method="_on_Player_dead"]
[connection signal="dead" from="Player" to="HUB" method="_on_Player_dead"]
[connection signal="hit" from="Player" to="HUB" method="_on_Player_hit"]
[connection signal="melee_weapon_power_up" from="Player" to="HUB" method="_on_Player_melee_weapon_power_up"]
[connection signal="melee_weapon_power_up_off" from="Player" to="HUB" method="_on_Player_melee_weapon_power_up_off"]
[connection signal="pickup_coin" from="Player" to="Scoring" method="_on_Player_pickup_coin"]
[connection signal="ranged_weapon_power_up" from="Player" to="HUB" method="_on_Player_ranged_weapon_power_up"]
[connection signal="ranged_weapon_power_up_off" from="Player" to="HUB" method="_on_Player_ranged_weapon_power_up_off"]
[connection signal="speed_power_up" from="Player" to="HUB" method="_on_Player_speed_power_up"]
[connection signal="speed_power_up_off" from="Player" to="HUB" method="_on_Player_speed_power_up_off"]
[connection signal="switch_weapon" from="Player" to="HUB" method="_on_Player_switch_weapon"]
[connection signal="start" from="HUB" to="EnemyTimer" method="_on_HUB_start"]
[connection signal="start" from="HUB" to="SpawnerLeft" method="_on_HUB_start"]
[connection signal="start" from="HUB" to="SpawnerMiddle" method="_on_HUB_start"]
[connection signal="start" from="HUB" to="SpawnerRight" method="_on_HUB_start"]
[connection signal="start" from="HUB" to="Player" method="_on_HUB_start"]
[connection signal="start" from="HUB" to="Scoring" method="_on_HUB_start"]
[connection signal="start" from="HUB" to="Projectiles" method="_on_HUB_start"]
[connection signal="new_stage" from="Scoring" to="EnemyTimer" method="_on_Scoring_new_stage"]
[connection signal="new_stage" from="Scoring" to="HUB" method="_on_Scoring_new_stage"]
